=============
Release Notes
=============

.. default-domain:: mongodb

.. contents:: On this page
   :local:
   :backlinks: none
   :depth: 1
   :class: twocols

|compass| 1.15
--------------

- Added support for :ref:`exporting aggregation pipelines
  <compass-export-pipeline>` and :ref:`exporting queries
  <compass-export-query>` in the syntax of the following languages:

  - Java

  - Node

  - C#

  - Python 3

|compass| 1.14
--------------

*Released June 26, 2018*

- Added :ref:`Aggregation Pipeline Builder <compass-agg-builder>`,
  which provides the ability to execute
  :manual:`aggregation pipelines </core/aggregation-pipeline/>` to
  gain additional insight into your data.

- Added |compass| :ref:`Isolated Edition <compass-isolated>` which
  restricts network requests to only the server Compass connects to.

|compass| 1.13
--------------

*Released May 3, 2018*

- Added ability to
  :ref:`import and export data <compass-import-export>` in **JSON** and
  **CSV** format.

|compass| 1.12
--------------

*Released March 5, 2018*

- Added |compass| :ref:`Readonly Edition <compass-readonly>` which
  provides the ability to limit certain :ref:`CRUD operations <crud>`
  within your organization.

  .. include:: /includes/fact-readonly-nonpermitted-actions.rst

- Added support for :doc:`connecting to Compass </connect>` using an
  :abbr:`SRV record (Service record)`. In the connect dialog, if
  Compass detects an SRV record URI on the clipboard it
  auto-completes the dialog based on the SRV record.

- Made various performance and stability inprovements to the documents tab.

|compass| 1.11
--------------

*Released December 17, 2017*

.. include:: /includes/fact-release-notes-1.11.rst

|compass| 1.10
--------------

*Released Oct 25, 2017*

- Now available in two editions, Compass Community and Compass.

  Compass provides the following features not in the Community edition:

  - Kerberos Authentication

  - LDAP Authentication

  - x509 Authentication
