@@ -29,6 +29,16 @@ are presented with a blank aggregation pipeline. The
 :guilabel:`Aggregations` view displays 20 documents sampled from the
 current collection.
 
+To populate the Aggregation Pipeline Builder, you can either:
+
+- :ref:`Create a new Aggregation Pipeline in the UI <create-agg-pipeline>`,
+
+- :ref:`Open a saved pipeline <open-saved-pipeline>`, or
+
+- :ref:`Import a Pipeline from Plain Text <compass-import-pipeline>`
+
+.. _create-agg-pipeline:
+
 Create an Aggregation Pipeline
 ------------------------------
 
@@ -47,12 +57,14 @@ To save a pipeline:
 
 2. Click :guilabel:`Save Pipeline`.
 
+.. _open-saved-pipeline:
+
 Open a Saved Pipeline
 ---------------------
 
 .. important::
 
-   Opening a saved pipeline abandons any **unsaved** changes to the
+   Opening a saved pipeline abandons any unsaved changes to the
    pipeline you are currently working on. If the circle at the
    top-right of the :guilabel:`Aggregations` view is orange, this
    means you have unsaved changes to your pipeline.
@@ -196,5 +208,6 @@ The pipeline returns the following document:
    .. toctree::
       :titlesonly:
 
+      /import-pipeline-from-text
       /export-pipeline-to-language
 
