@@ -8,7 +8,7 @@ Export Pipeline to Specific Language
 
 *New in version 1.15.0*
 
-You can use the :ref:`aggregation pipeline builder
+You can use the :ref:`Aggregation Pipeline Builder
 <compass-agg-builder>` to export your finished pipeline to one of the
 supported languages; Java, Node, C#, and Python 3. This feature
 facilitates formatting and exporting pipelines created in |compass| for
@@ -51,12 +51,8 @@ Procedure
 
 #. Click the :guilabel:`Copy` button at the top-right of the pipeline
    to copy the pipeline for the selected language to your clipboard.
-   You can now integrate and execute your created pipeline in your
+   You can now integrate and execute your created pipeline into your
    application.
 
 #. Click :guilabel:`Close` to return to the aggregation pipeline
    builder.
-
-.. seealso::
-
-   - :ref:`Aggregation Pipeline Builder <compass-agg-builder>`
