@@ -49,7 +49,3 @@ Procedure
 
 #. Click :guilabel:`Close` to return to the :ref:`Documents Tab
    <compass-documents>`.
-
-.. seealso::
-
-   - :ref:`Query Bar <compass-query-bar>`
