@@ -1,0 +1,51 @@
+.. _compass-import-pipeline:
+
+=========================
+Import Pipeline from Text
+=========================
+
+.. default-domain:: mongodb
+
+.. contents:: On this page
+   :local:
+   :backlinks: none
+   :depth: 1
+   :class: singlecol
+
+*New in version 1.15.0*
+
+You can import aggregation pipelines from plain text into
+the :ref:`Aggregation Pipeline Builder <compass-agg-builder>` to
+easily modify and execute your pipelines. Importing a plain text
+aggregation pipeline shows how each stage of the pipeline
+affects the output, and illustrates the effects of modifying specific
+pipeline stages using the Pipeline Builder's :guilabel:`Output` panes.
+
+Syntax
+------
+
+The imported pipeline must be in the
+:manual:`MongoDB query language </tutorial/query-documents/>`
+(i.e. the same syntax used as the ``pipeline`` parameter of the
+:manual:`db.collection.aggregate()
+</reference/method/db.collection.aggregate/>` method). The imported
+pipeline must be an array, even if there is only one stage in the
+pipeline.
+
+Procedure
+---------
+
+.. important::
+
+   Importing a new pipeline abandons any unsaved changes to the
+   pipeline you are currently working on. If the circle at the
+   top-right of the :guilabel:`Aggregations` view is orange, this
+   means you have unsaved changes to your pipeline.
+
+.. include:: /includes/steps/import-pipeline-from-text.rst
+
+Once you have imported your pipeline, if :guilabel:`Auto Preview` is
+enabled, the pipeline automatically executes. You can now modify
+individual stages of your pipeline, and see the results of those
+modifications reflected in the :guilabel:`Output` pane to the right
+of each respective stage.
