@@ -1,0 +1,35 @@
+title: Open the Aggregation Pipeline Builder for the desired
+       collection.
+level: 4
+ref: navigate-to-collection
+content: |
+  Navigate to the collection for which you wish to import your
+  aggregation pipeline. Click the :guilabel:`Aggregations` tab.
+---
+title: Open the :guilabel:`New Pipeline From Plain Text` dialog.
+level: 4
+ref: open-new-pipeline-dialog
+content: |
+  a. Click the :guilabel:`Ellipses (...)` button at the top of the
+     :guilabel:`Aggregations` view.
+
+  b. Click :guilabel:`New Pipeline From Text`.
+---
+title: Enter your pipeline in the dialog.
+level: 4
+ref: enter-pipeline
+content: |
+  If you have a prewritten pipeline you wish to import into
+  the Aggregation Pipeline Builder, copy it to your clipboard and
+  paste it into the :guilabel:`New Pipeline from Plain Text`
+  dialog. Otherwise, type your pipeline in the input.
+
+  .. figure:: /images/compass/import-pipeline-from-text-example.png
+     :figwidth: 720px
+     :alt: Import pipeline from text example
+---
+title: Click :guilabel:`Create New` to import your pipeline.
+level: 4
+ref: click-create-new
+...
+
