@@ -13,6 +13,10 @@ Release Notes
 |compass| 1.15
 --------------
 
+- Added support for :ref:`importing plain text pipelines
+  <compass-import-pipeline>` into the
+  :ref:`Aggregation Pipeline Builder <compass-agg-builder>`.
+
 - Added support for :ref:`exporting aggregation pipelines
   <compass-export-pipeline>` and :ref:`exporting queries
   <compass-export-query>` in the syntax of the following languages:
